[package]
name = "grove2"
version = "0.1.0"
authors = ["Carl Malmz <callem217@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.11.0"
# failure = "0.1.6"
audiopus = "0.2.0"
bytes = "0.5.2"
anyhow = "1.0.25"
byteorder = "1.3.2"
crossbeam = { git = "https://github.com/stjepang/crossbeam.git", branch = "spsc" }
parking_lot = "0.10.0"
array_iterator = "0.2.4"
futures = "0.3.1"
pico-args = "0.3.0"
ringbuf = "0.2.1"
thiserror = "1.0.9"

[dependencies.tokio]
version = "0.2.4"
features = ["full"]
