[package]
name = "grove2"
version = "0.1.0"
authors = ["Carl Malmz <callem217@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.11.0"
audiopus = "0.2.0"
anyhow = "1.0.26"
byteorder = "1.3.2"
# crossbeam = { git = "https://github.com/stjepang/crossbeam.git", branch = "spsc" }
futures = "0.3.1"
pico-args = "0.3.1"
# ringbuf = "0.2.1"
thiserror = "1.0.9"
crossbeam-utils = "0.7.0"

[dependencies.tokio]
version = "0.2.9"
features = ["full"]

[dependencies.tokio-util]
version = "0.2.0"
features = ["codec", "udp"]
